# network-analytics

./: .gitignore  README.md  pyproject.toml
scripts/: generate_sample_data.py
src/network_analytics/: __init__.py  __main__.py  dashboard.py  pipeline.py
tests/: test_pipeline.py
